--- a/public/assets/css/carousel.css
+++ b/public/assets/css/carousel.css
@@ -5,8 +5,8 @@
 body {
     padding-top: 5rem;
     padding-bottom: 2rem;
-    color: #5a5a5a;
-  
+    color: #4b1348;
+    
 }
 
 
@@ -15,7 +15,9 @@ body {
 
 /* Carousel base class */
 .carousel {
-    margin-bottom: 4rem;
+    padding-top: 6rem;
+    padding-bottom: 4rem;
+    background-color: #ffb908e1;
   
 }
 /* Since positioning the image, we need to help out the caption */
@@ -34,9 +36,9 @@ body {
 .carousel-item > img {
     position: absolute;
     top: 0;
-    left: 45%;
-    width: auto;
-    height: 80%;
+    left: 33%;
+    width: 100%;
+    height: 100%;
 }
 
 
