--- a/templates/prisca/base.html.twig
+++ b/templates/prisca/base.html.twig
@@ -125,9 +125,9 @@ Ou tout simplement envie de déguster un bon gâteau fait maison ?<br>
 Demandez-nous !<br>
 Fêtes un voeu, au service de vos festivités !</p></div></div><br><!-- Marketing messaging and featurettes
 					    ================================================== --><!-- Wrap the rest of the page in another container to center all the content. --><div class="container marketing">{% block content %}{% endblock %} </div><!-- /.container --><!-- FOOTER --><!-- RENSEIGNEMENYS --><!-- Footer -->
-<footer class="text-center bg-light text-muted"> <!-- CONTACT -->
-<div class="shadow m-4">
-<div class="container mt-5 mb-5 p-5">
+<footer class="text-center bg-light text-muted "> <!-- CONTACT -->
+<div class="mt-5 mb-5 p-5 shadow m-4 ">
+<div class="align-content-center">
 	<div>
 		<h2 class="text-center bg-light">Contactez-nous</h2>
 	</div>
@@ -162,7 +162,7 @@ Fêtes un voeu, au service de vos festivités !</p></div></div><br><!-- Marketin
 			<input class="mt-4" type="button" submit="Envoyer" value="Envoyer">
 		</fieldset>
 	</form>
-</div></div></div>
+</div></div>
 
 <!-- Section: Links  --><section class=""><div
 class="container text-center text-md-start mt-5">
