--- a/templates/prisca/base.html.twig
+++ b/templates/prisca/base.html.twig
@@ -123,7 +123,10 @@
 Une fête de famille ?<br>
 Ou tout simplement envie de déguster un bon gâteau fait maison ?<br>
 Demandez-nous !<br>
-Fêtes un voeu, au service de vos festivités !</p></div></div><br><!-- Marketing messaging and featurettes
+Fêtes un voeu, au service de vos festivités !</p></div></div><br>
+
+
+<!-- Marketing messaging and featurettes
 					    ================================================== --><!-- Wrap the rest of the page in another container to center all the content. --><div class="container marketing">{% block content %}{% endblock %} </div><!-- /.container --><!-- FOOTER --><!-- RENSEIGNEMENYS --><!-- Footer -->
 <footer class="text-center bg-light text-muted "> <!-- CONTACT -->
 <div class="mt-5 mb-5 p-5 shadow m-4 ">
