--- a/templates/prisca/index.html.twig
+++ b/templates/prisca/index.html.twig
@@ -2,20 +2,17 @@
 
 {% block content %}
 
+
+
 	<h2 class="text-center mt-5">Nos prestations</h2>
 
 	<!-- div card packs -->
 	<div class="packsCards">
 		<div class="album py-4">
 			<div class="container">
-
-			
-			</div>
+ 			</div>
 		</div>
-		</div>
-
-
-<div>
+	</div>
 
 <div class="row row-cols-1 row-cols-md-2 g-4 ">
   <div class="col">
@@ -29,20 +26,26 @@
         <h5 class="card-title">Pack anniversaire enfant</h5>
         <p class="card-text">
           Des formules clefs en main à une fête plus personnalisée, chez vous ou dans un autre lieu, tout est possible.
-Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi notre sélection d’activités, toutes sélectionnées pour leurs approches créatives, ludiques et originales.
+Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi...
+        </p> 		
 
-Vous avez un gourmand ? C’est une graine d’artiste ? Le sport, il adore ? Geek un jour, geek toujours ? Il a une âme d’explorateur ? Une vocation scientifique ?… parmi les nombreuses activités que nous avons sélectionnées auprès de professionnels, nous trouverons ensemble le thème et le programme de rêve pour son anniversaire.
-
-Nous vous rencontrons avec votre enfant pour connaître ses goûts, votre budget, le nombre d’invités et pour définir vos besoins (invitations, animations, décorations, gâteaux, etc).
-
-Le jour-J nous coordonnons et gérons l’anniversaire : Installation et déroulement (animation-gâteau-cadeau).
-Prix : A partir de 300 €
-        </p>
-
-										<div class="btn-group">
-										<button type="button" class="btn btn-info shadow m-4">En savoir plus</button>
-										<button type="button" class="btn shadow m-4">Réserver</button>
-									</div>
+<p>
+  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="verif_dispo.html.twig" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Réserver
+  </a>
+  <button class="btn shadow m-4" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+   En savoir plus
+  </button>
+</p>
+<div class="collapse" id="collapseExample">
+  <div class="card m-2 p-3 text-justify">
+    notre sélection d’activités, toutes sélectionnées pour leurs approches créatives, ludiques et originales. Vous avez un gourmand ? C’est une graine d’artiste ? 
+	   Le sport, il adore ? Geek un jour, geek toujours ? Il a une âme d’explorateur ? Une vocation scientifique ?… 
+	   Parmi les nombreuses activités que nous avons sélectionnées auprès de professionnels, nous trouverons ensemble le thème et le programme de rêve pour son anniversaire.
+	   Nous vous rencontrons avec votre enfant pour connaître ses goûts, votre budget, le nombre d’invités et pour définir vos besoins (invitations, animations, décorations, gâteaux, etc).
+	   Le jour-J nous coordonnons et gérons l’anniversaire : installation et déroulement (animation-gâteau-décoration).
+	   <br>Prix : A partir de 300 € </div>
+</div>
 								
       </div>
     </div>
@@ -57,16 +60,24 @@ Prix : A partir de 300 €
       <div class="card-body">
         <h5 class="card-title">Pack anniversaire adulte</h5>
         <p class="card-text">
-         Un anniversaire programmé ? Un anniversaire surprise ? Votre petite amie, votre mari, votre grand-mère ? Pour ses 35 ans, vos 50 ans, ses 80 ans ? Bubbly Event vous conseille et vous accompagne dans le choix du lieu (à domicile, dans un restaurant ou dans une salle), la durée (sur un week-end, une soirée), et de la thématique, etc. Nous nous occupons de vos réservations, de l’installation et de l’envoi des invitations si vous le souhaitez.
-
-Prix : Nous consulter
+         Un anniversaire programmé ? Un anniversaire surprise ? Votre petite amie, votre mari, votre grand-mère ? Pour ses 35 ans, vos 50 ans, ses 80 ans ? 
+		 Fêtes un voeu vous conseille et... 
         </p>
+<p>
+  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="verif_dispo.html.twig" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Réserver
+  </a>
+  <button class="btn shadow m-4" type="button" data-toggle="collapse" data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">
+   En savoir plus
+  </button>
+</p>
+<div class="collapse" id="collapseExample2">
+  <div class="card m-2 p-3 text-justify">
+   vous accompagne dans le choix du lieu (à domicile, dans un restaurant ou dans une salle), la durée (sur un week-end, une soirée), et de la thématique, etc. Nous nous occupons de vos réservations, de l’installation et de l’envoi des invitations si vous le souhaitez.
+       <br>  Prix : Nous consulter</div>
+</div>
 
 
-										<div class="btn-group">
-										<button type="button" class="btn btn-info shadow m-4">En savoir plus</button>
-										<button type="button" class="btn shadow m-4">Réserver</button>
-									</div>
       </div>
     </div>
   </div>
@@ -80,16 +91,24 @@ Prix : Nous consulter
       <div class="card-body">
         <h5 class="card-title">Pack soirées karaoké</h5>
         <p class="card-text">
-         D'arbres en arbres, découvrez ce parcours acrobatique en hauteur dans un cadre splendide sur le domaine de Figuerolles, à Martigues.
-
-A la découverte de ce lieu, c'est un nouveau goût de nature que vous allez découvrir. Cet espace de 130 hectares recèle de richesses immenses en termes de patrimoine, d'histoire et de végétation. Patrimoine agricole, nature méditerranéenne et loisirs de plein air vont se conjuguer dans un cadre grandiose.</p>
+        Les soirées les plus réussies sont souvent les plus simples, celles dans lesquelles on peut chanter et danser, avec une programmation musicale que tout le monde connait, et qui rappelle à tous de bons souvenirs... 
+			</p>
 								
-        </p>
-		
-										<div class="btn-group">
-										<button type="button" class="btn btn-info shadow m-4">En savoir plus</button>
-										<button type="button" class="btn shadow m-4">Réserver</button>
-									</div>
+        </p><p>
+  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="verif_dispo.html.twig" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Réserver
+  </a>
+  <button class="btn shadow m-4" type="button" data-toggle="collapse" data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
+   En savoir plus
+  </button>
+</p>
+<div class="collapse" id="collapseExample3">
+  <div class="card m-2 p-3 text-justify">
+  D’ailleurs, souvent les chansons les plus populaires sont le meilleur moyen de permettre à chacun de se lâcher comme il le faut.
+	 Une animation Karaoké pour vos soirées privées avec plus de 44 000 titres disponibles, un book de sélection rapide personnalisable, 4 micros sans fil, une sonorisation professionnelle. 
+  Bref, un matériel professionnel de qualité, adapté aux soirées privées. 
+  <br>Prix : à partir de 300€</div>
+</div>
       </div>
     </div>
   </div>
@@ -104,26 +123,20 @@ A la découverte de ce lieu, c'est un nouveau goût de nature que vous allez dé
         <h5 class="card-title">Pack soirées dansantes</h5>
         <p class="card-text">
           Vous souhaitez plutôt une soirée classique autour d’un cocktail au rythme d’un rock endiablé ou une soirée à thème qui transforme vos invités en acteurs de l’évènement grâce à une activité collective ou atypique.
-Lieu, traiteur, ambiance musicale, service de sécurité, etc. Nous prenons en charge l’ensemble des prestations (réservation, gestion, coordination, …).
 
- 
-
-Prix : Nous consulter
-        </p>
-
-
-										<div class="btn-group">
-										<button type="button" class="btn btn-info shadow m-4">En savoir plus</button>
-
-
-
-
-
-
-
-										
-										<button type="button" class="btn shadow m-4">Réserver</button>
-									</div>
+        </p><p>
+  <a class="btn btn-info shadow m-4" data-toggle="collapse" href="verif_dispo.html.twig" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Réserver
+  </a>
+  <button class="btn shadow m-4" type="button" data-toggle="collapse" data-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample">
+   En savoir plus
+  </button>
+</p>
+<div class="collapse" id="collapseExample4">
+  <div class="card m-2 p-3 text-justify">
+  Lieu, traiteur, ambiance musicale, service de sécurité, etc. Nous prenons en charge l’ensemble des prestations (réservation, gestion, coordination, …).
+<br>Prix : Nous consulter</div>
+</div>
       </div>
     </div>
   </div>
@@ -135,52 +148,33 @@ Prix : Nous consulter
 
 		<!-- GALERIE -->
 
-		<div class="container mt-5">
+<div class="container mt-5">
 			<div>
 				<h2 class="text-center">Galerie</h2>
 			</div>
-			<div class="d-flex justify-content-center">
-				<div class="row">
-					<div class="col-xs-3">
-						<a href="images/image1.jpg" class="thumbnail">
-							<img class="m-5" width="200" height="200" src={{asset('/images/imagesUpload/KohLanta/DSC_0017.jpg')}} alt="Image 1"/>
-						</a>
-					</div>
-					<div class="col-xs-3">
-						<a href="images/image2.jpg" class="thumbnail ">
-							<img class="m-5" width="200" height="200" src={{asset('/images/imagesUpload/KohLanta/DSC_0017.jpg')}} alt="Image 2"/>
-						</a>
-					</div>
-					<div class="col-xs-3">
-						<a href="images/image3.jpg" class="thumbnail">
-							<img class="m-5" width="200" height="200" src={{asset('/images/imagesUpload/KohLanta/DSC_0017.jpg')}} alt="Image 3"/>
-						</a>
-					</div>
-				</div>
-			</div>
-			<br>
 
-			<div class="d-flex justify-content-center">
-				<div class="row">
-					<div class="col-xs-3">
-						<a href="images/image1.jpg" class="thumbnail">
-							<img class="m-5" width="200" height="200" src={{asset('/images/imagesUpload/KohLanta/DSC_0017.jpg')}} alt="Image 1"/>
-						</a>
-					</div>
-					<div class="col-xs-3">
-						<a href="images/image2.jpg" class="thumbnail">
-							<img class="m-5" width="200" height="200" src={{asset('/images/imagesUpload/KohLanta/DSC_0017.jpg')}} alt="Image 2"/>
-						</a>
-					</div>
-					<div class="col-xs-3">
-						<a href="images/image3.jpg" class="thumbnail">
-							<img class="m-5" width="200" height="200" src={{asset('/images/imagesUpload/KohLanta/DSC_0017.jpg')}} alt="Image 3"/>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
+	<div class="card-group mt-5">
+  		<div class="card">
+   			 <img
+    		  src="https://mdbootstrap.com/img/new/standard/city/041.jpg"
+    		  class="card-img-top m-5"
+    		  alt="..."/>
+ 		</div>
+ 		<div class="card">
+  			  <img
+  			    src="https://mdbootstrap.com/img/new/standard/city/042.jpg"
+   		        class="card-img-top m-5"
+    		    alt="..."/>
+  		</div>
+ 		<div class="card">
+    		<img
+      		src="https://mdbootstrap.com/img/new/standard/city/043.jpg"
+      		class="card-img-top m-5"
+      		alt="..."/>
+  		</div>
 	</div>
+</div>
+		
 
 
 	<!-- AVIS -->
@@ -231,4 +225,6 @@ Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à
 		<!-- /.row -->
 	</div>
 
+
 {% endblock %}
+
