--- a/templates/prisca/index.html.twig
+++ b/templates/prisca/index.html.twig
@@ -157,22 +157,71 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
   		<div class="card">
    			 <img
     		  src="https://mdbootstrap.com/img/new/standard/city/041.jpg"
-    		  class="card-img-top m-5"
-    		  alt="..."/>
+    		  class="card-img-top"
+    		  alt="..."
+			  />
  		</div>
  		<div class="card">
   			  <img
   			    src="https://mdbootstrap.com/img/new/standard/city/042.jpg"
-   		        class="card-img-top m-5"
+   		        class="card-img-top"
     		    alt="..."/>
   		</div>
  		<div class="card">
     		<img
       		src="https://mdbootstrap.com/img/new/standard/city/043.jpg"
-      		class="card-img-top m-5"
+      		class="card-img-top"
       		alt="..."/>
   		</div>
 	</div>
+
+<div class="card-group mt-5">
+  		<div class="card">
+   			 <img
+    		  src="https://mdbootstrap.com/img/new/standard/city/041.jpg"
+    		  class="card-img-top"
+    		  alt="..."
+			  />
+ 		</div>
+ 		<div class="card">
+  			  <img
+  			    src="https://mdbootstrap.com/img/new/standard/city/042.jpg"
+   		        class="card-img-top"
+    		    alt="..."/>
+  		</div>
+ 		<div class="card">
+    		<img
+      		src="https://mdbootstrap.com/img/new/standard/city/043.jpg"
+      		class="card-img-top"
+      		alt="..."/>
+  		</div>
+	</div>
+
+
+	<div class="card-group mt-5">
+  		<div class="card">
+   			 <img
+    		  src="https://mdbootstrap.com/img/new/standard/city/041.jpg"
+    		  class="card-img-top"
+    		  alt="..."
+			  />
+ 		</div>
+ 		<div class="card">
+  			  <img
+  			    src="https://mdbootstrap.com/img/new/standard/city/042.jpg"
+   		        class="card-img-top"
+    		    alt="..."/>
+  		</div>
+ 		<div class="card">
+    		<img
+      		src="https://mdbootstrap.com/img/new/standard/city/043.jpg"
+      		class="card-img-top"
+      		alt="..."/>
+  		</div>
+	</div>
+
+
+
 </div>
 		
 
