--- a/templates/prisca/index.html.twig
+++ b/templates/prisca/index.html.twig
@@ -231,39 +231,43 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 		<div>
 			<h2 class="text-center">Avis</h2>
 		</div>
-		<div class="row mt-5">
+		<div class="row mt-5 justify-self-center">
 
 			<div class="col-lg-4">
 
-				<img class="bd-placeholder-img rounded-circle" width="140" height="140" src={{asset('/images/imagesUpload/icones/fem.jpeg')}}  preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-					<title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text>
+				<img class="bd-placeholder-img rounded-circle" width="140" height="140" 
+				src={{asset('/images/imagesUpload/icones/fem.jpeg')}} 
+				role="img" aria-label="Placeholder: 140x140">
+				
 				</img>
 				<h2>Olivia P. :</h2>
-				<p>
+				<p class="text-center">
 Bonjour bonjour!
-Mon mariage était un moment unique dans ma vie. Je m’en souviens comme si c’était hier. Son ambiance « Love Power », le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable qui nous a été offert par notre ami artificier.
+Le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable qui nous a été offert par notre ami artificier.
 Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence?
 								</p>
 			</div>
 			<!-- /.col-lg-4 -->
 			<div class="col-lg-4">
-				<img class="bd-placeholder-img rounded-circle" width="140" height="140" src={{asset('/images/imagesUpload/icones/hom.png')}} preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-					<title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text>
+				<img class="bd-placeholder-img rounded-circle" width="120" height="120" 
+				src={{asset('/images/imagesUpload/icones/hom.png')}} 
+				role="img" aria-label="Placeholder: 140x140">
 				</img>
 				<h2>Eric M. :</h2>
-					<p>
+					<p class="text-center">
 Salut !
-Mon mariage était un moment unique dans ma vie. Je m’en souviens comme si c’était hier. Son ambiance « Love Power », le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable qui nous a été offert par notre ami artificier.
-Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence?
+Mon anniversaire était un moment unique dans ma vie. Je m’en souviens comme si c’était hier. Son ambiance « Love Power », le cadre idyllique des plus beaux paysages de vacances...
 								</p>
 			</div>
 			<!-- /.col-lg-4 -->
 			<div class="col-lg-4">
-				<img class="bd-placeholder-img rounded-circle" width="140" height="140" src={{asset('/images/imagesUpload/icones/fem.jpeg')}} preserveaspectratio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
-					<title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text>
+				<img class="bd-placeholder-img rounded-circle" width="140" height="140" 
+				src={{asset('/images/imagesUpload/icones/fem.jpeg')}} 
+				role="img" aria-label="Placeholder: 140x140">
+				
 				</img>
 				<h2>Faby B.</h2>
-					<p>
+					<p class="text-center">
 Hi !
 Mon mariage était un moment unique dans ma vie. Je m’en souviens comme si c’était hier. Son ambiance « Love Power », le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable qui nous a été offert par notre ami artificier.
 Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence?
