--- a/templates/prisca/base.html.twig
+++ b/templates/prisca/base.html.twig
@@ -99,17 +99,14 @@
 <li data-target="#myCarousel" data-slide-to="1"></li>
 <li data-target="#myCarousel" data-slide-to="2"></li></ol><div class="carousel-inner">
 <div class="carousel-item active">
-	<img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/KohLanta/DSC_0017.jpg')}} preserveaspectratio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="auto"></img>
+	<img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/ban-anniv-enfant.jpg')}} role="img"><rect width="100%" height="auto"></img>
 
 </div>
 <div class="carousel-item">
-	<img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/KohLanta/DSC_0025.JPG')}} preserveaspectratio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="auto"></img>
+	<img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/ban-anniv-adulte.jpg')}} role="img"><rect width="100%" height="auto"></img>
 
 </div>
-<div class="carousel-item">
-	<img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/KohLanta/DSC_0013.JPG')}} preserveaspectratio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="auto"></img>
-
-</div></div>
+</div>
 <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 <span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
