--- a/templates/prisca/index.html.twig
+++ b/templates/prisca/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-
+<div id="prestations">
 	<h2 class="text-center mt-5">Nos prestations</h2>
 
 	<!-- div card packs -->
@@ -141,7 +141,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
     </div>
   </div>
 </div>
-
+</div>
 
 </div>
 
