--- a/templates/prisca/base.html.twig
+++ b/templates/prisca/base.html.twig
@@ -52,7 +52,7 @@
 								</a>
 							</li>
 							<li class="nav-item active mr-2">
-								<a class="nav-link" href="#">Nos prestations
+								<a class="nav-link" href="#prestations">Nos prestations
 								</a>
 							</li>
 							<li class="nav-item active mr-2">
@@ -97,7 +97,8 @@
 <main role="main"><div id="myCarousel" class="carousel slide img-fluid mx-auto" data-ride="carousel"><ol class="carousel-indicators">
 <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 <li data-target="#myCarousel" data-slide-to="1"></li>
-<li data-target="#myCarousel" data-slide-to="2"></li></ol><div class="carousel-inner">
+<li data-target="#myCarousel" data-slide-to="2"></li>
+<li data-target="#myCarousel" data-slide-to="3"></li></ol><div class="carousel-inner">
 <div class="carousel-item active">
 	<img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/ban-anniv-enfant.jpg')}} role="img"><rect width="100%" height="auto"></img>
 
@@ -106,6 +107,16 @@
 	<img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/ban-anniv-adulte.jpg')}} role="img"><rect width="100%" height="auto"></img>
 
 </div>
+
+<div class="carousel-item">
+	<img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/ban-karaoke.jpg')}} role="img"><rect width="100%" height="auto"></img>
+
+</div>
+<div class="carousel-item">
+	<img class="bd-placeholder-img" width="100%" height="auto" src={{asset('/images/imagesUpload/ban-soiree.jpg')}} role="img"><rect width="100%" height="auto"></img>
+
+</div>
+
 </div>
 <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -154,15 +165,16 @@ Fêtes un voeu, au service de vos festivités !</p></div></div><br>
 				<input type="email" class="form-control" id="email" placeholder="Votre e-mail">
 			</div>
 
-			<div class="form-group mt-4">
+			<div class="form-group mt-4 ">
 				<label for="text">Votre message</label>
 				<textarea class="form-control" id="message" rows="3"></textarea>
 			</div>
 
-			<input class="mt-4" type="button" submit="Envoyer" value="Envoyer">
+			<input class="mt-4 mb-5" type="button" submit="Envoyer" value="Envoyer">
 		</fieldset>
 	</form>
 </div></div>
+<hr>
 
 <!-- Section: Links  --><section class=""><div
 class="container text-center text-md-start mt-5">
