--- a/templates/prisca/base.html.twig
+++ b/templates/prisca/base.html.twig
@@ -56,17 +56,17 @@
 								</a>
 							</li>
 							<li class="nav-item active mr-2">
-								<a class="nav-link" href="#">Galerie
+								<a class="nav-link" href="#galerie">Galerie
 								</a>
 							</li>
 						</li>
 						<li class="nav-item active mr-2">
-							<a class="nav-link" href="#">Avis
+							<a class="nav-link" href="#avis">Avis
 							</a>
 						</li>
 					</li>
 					<li class="nav-item active mr-2">
-						<a class="nav-link" href="">Contact
+						<a class="nav-link" href="#contact">Contact
 						</a>
 					</li>
 				</li>
