--- a/templates/prisca/index.html.twig
+++ b/templates/prisca/index.html.twig
@@ -2,15 +2,14 @@
 
 {% block content %}
 
-
-<div id="prestations">
-	<h2 class="text-center mt-5">Nos prestations</h2>
-
 	<!-- div card packs -->
 	<div class="packsCards">
+		<h2 class="text-center mt-5" id="prestations">Nos prestations</h2>
 		<div class="album py-4">
 			<div class="container">
  			</div>
+		
+		
 		</div>
 	</div>
 
@@ -143,14 +142,11 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 </div>
 </div>
 
-</div>
-
-
 		<!-- GALERIE -->
 
 <div class="container mt-5">
 			<div>
-				<h2 class="text-center">Galerie</h2>
+				<h2 class="text-center" id="galerie">Galerie</h2>
 			</div>
 
 	<div class="card-group mt-5">
@@ -229,7 +225,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 	<!-- AVIS -->
 	<div class="container mt-5">
 		<div>
-			<h2 class="text-center">Avis</h2>
+			<h2 class="text-center" id="avis">Avis</h2>
 		</div>
 		<div class="row mt-5 justify-self-center">
 
