--- a/templates/prisca/index.html.twig
+++ b/templates/prisca/index.html.twig
@@ -3,8 +3,9 @@
 {% block content %}
 
 	<!-- div card packs -->
+	<div id="prestations">
 	<div class="packsCards">
-		<h2 class="text-center mt-5" id="prestations">Nos prestations</h2>
+		<h2 class="text-center mt-5" id="">Nos prestations</h2>
 		<div class="album py-4">
 			<div class="container">
  			</div>
@@ -141,7 +142,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
   </div>
 </div>
 </div>
-
+</div>
 		<!-- GALERIE -->
 
 <div class="container mt-5">
