--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,3 +4,16 @@
     border-bottom: 2px solid #ffba08e1;
    
 }
+
+body {
+
+    margin-top: 5vh;
+    
+}
+
+#galerie {
+
+    margin-top: 8vh;
+    margin-bottom: 8vh;
+   
+}
