--- a/templates/prisca/index.html.twig
+++ b/templates/prisca/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-	<!-- div card packs -->
+	<!-- div card packs prestations -->
 	<div id="prestations">
 	<div class="packsCards">
 		<h2 class="text-center mt-5" id="">Nos prestations</h2>
@@ -145,81 +145,78 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 </div>
 		<!-- GALERIE -->
 
-<div class="container mt-5">
-			<div>
-				<h2 class="text-center" id="galerie">Galerie</h2>
-			</div>
+<div class="container" >
+			
+<section id="shadows">
 
-	<div class="card-group mt-5">
-  		<div class="card">
-   			 <img
-    		  src="https://mdbootstrap.com/img/new/standard/city/041.jpg"
-    		  class="card-img-top"
-    		  alt="..."
-			  />
- 		</div>
- 		<div class="card">
-  			  <img
-  			    src="https://mdbootstrap.com/img/new/standard/city/042.jpg"
-   		        class="card-img-top"
-    		    alt="..."/>
-  		</div>
- 		<div class="card">
-    		<img
-      		src="https://mdbootstrap.com/img/new/standard/city/043.jpg"
-      		class="card-img-top"
-      		alt="..."/>
-  		</div>
-	</div>
+  <!--Title-->
+  <h2 class="section-heading text-center" id="galerie">
+   Galerie
+  </h2>
+  <!--Section: Live preview-->
+  <section class="section-preview">
+    <!--Grid row-->
+    <div class="row">
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-12 mb-4">
+        <img src="images/imagesUpload/img(55)-mini.jpg" class="img-fluid z-depth-1" alt="1">
+      </div>
+      <!--Grid column-->
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src="images/imagesUpload/img(55)-mini.jpg" class="img-fluid z-depth-1-half" alt="2">
+      </div>
+      <!--Grid column-->
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src="images/imagesUpload/img(55)-mini.jpg" class="img-fluid z-depth-2" alt="3">
+      </div>
+      <!--Grid column-->
+    </div>
+    <!--Grid row-->
+    <!--Grid row-->
+    <div class="row">
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-12 mb-4">
+        <img src="images/imagesUpload/img(55)-mini.jpg" class="img-fluid z-depth-3" alt="4">
+      </div>
+      <!--Grid column-->
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src="images/imagesUpload/img(55)-mini.jpg" class="img-fluid z-depth-4" alt="5">
+      </div>
+      <!--Grid column-->
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src="images/imagesUpload/img(55)-mini.jpg" class="img-fluid z-depth-5" alt="6">
+      </div>
+      <!--Grid column-->
+    </div>
+    <!--Grid row-->
 
-<div class="card-group mt-5">
-  		<div class="card">
-   			 <img
-    		  src="https://mdbootstrap.com/img/new/standard/city/041.jpg"
-    		  class="card-img-top"
-    		  alt="..."
-			  />
- 		</div>
- 		<div class="card">
-  			  <img
-  			    src="https://mdbootstrap.com/img/new/standard/city/042.jpg"
-   		        class="card-img-top"
-    		    alt="..."/>
-  		</div>
- 		<div class="card">
-    		<img
-      		src="https://mdbootstrap.com/img/new/standard/city/043.jpg"
-      		class="card-img-top"
-      		alt="..."/>
-  		</div>
-	</div>
-
-
-	<div class="card-group mt-5">
-  		<div class="card">
-   			 <img
-    		  src="https://mdbootstrap.com/img/new/standard/city/041.jpg"
-    		  class="card-img-top"
-    		  alt="..."
-			  />
- 		</div>
- 		<div class="card">
-  			  <img
-  			    src="https://mdbootstrap.com/img/new/standard/city/042.jpg"
-   		        class="card-img-top"
-    		    alt="..."/>
-  		</div>
- 		<div class="card">
-    		<img
-      		src="https://mdbootstrap.com/img/new/standard/city/043.jpg"
-      		class="card-img-top"
-      		alt="..."/>
-  		</div>
-	</div>
-
+	<div class="row">
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-12 mb-4">
+        <img src="images/imagesUpload/img(55)-mini.jpg" class="img-fluid z-depth-3" alt="4">
+      </div>
+      <!--Grid column-->
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src="images/imagesUpload/img(55)-mini.jpg" class="img-fluid z-depth-4" alt="5">
+      </div>
+      <!--Grid column-->
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-4">
+        <img src="images/imagesUpload/img(55)-mini.jpg" class="img-fluid z-depth-5" alt="6">
+      </div>
+      <!--Grid column-->
+    </div>
+  </section>
 
 
 </div>
+
+
 		
 
 
