--- a/templates/prisca/index.html.twig
+++ b/templates/prisca/index.html.twig
@@ -221,7 +221,7 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 
 
 	<!-- AVIS -->
-	<div class="container mt-5">
+	<div class="container">
 		<div>
 			<h2 class="text-center" id="avis">Avis</h2>
 		</div>
