--- a/templates/prisca/index.html.twig
+++ b/templates/prisca/index.html.twig
@@ -5,7 +5,7 @@
 	<!-- div card packs prestations -->
 	<div id="prestations">
 	<div class="packsCards">
-		<h2 class="text-center mt-5" id="">Nos prestations</h2>
+		<h2 class="text-center" id="">Nos prestations</h2>
 		<div class="album py-4">
 			<div class="container">
  			</div>
@@ -227,49 +227,71 @@ Votre enfant, Roi de la fête choisit alors l’atelier ou une thématique parmi
 		</div>
 		<div class="row mt-5 justify-self-center">
 
-			<div class="col-lg-4">
+<!-- 1er avis -->
+			<div class="col-lg-4 text-center">
 
-				<img class="bd-placeholder-img rounded-circle" width="140" height="140" 
-				src={{asset('/images/imagesUpload/icones/fem.jpeg')}} 
-				role="img" aria-label="Placeholder: 140x140">
-				
-				</img>
-				<h2>Olivia P. :</h2>
+			<div class="rating">
+	<div class="stars">
+		<i class="fa fa-star gold"></i>
+		<i class="fa fa-star gold"></i>
+		<i class="fa fa-star gold"></i>
+		<i class="fa fa-star gold"></i>
+		<i class="fa fa-star"></i>
+	</div>
+	
+</div>
+
+				<h2 class="mt-4">Olivia</h2>
 				<p class="text-center">
 Bonjour bonjour!
 Le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable qui nous a été offert par notre ami artificier.
 Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence?
 								</p>
 			</div>
-			<!-- /.col-lg-4 -->
-			<div class="col-lg-4">
-				<img class="bd-placeholder-img rounded-circle" width="120" height="120" 
-				src={{asset('/images/imagesUpload/icones/hom.png')}} 
-				role="img" aria-label="Placeholder: 140x140">
-				</img>
-				<h2>Eric M. :</h2>
-					<p class="text-center">
+			<!-- 2e avis -->
+			<div class="col-lg-4 text-center">
+
+			<div class="rating">
+	<div class="stars">
+		<i class="fa fa-star gold"></i>
+		<i class="fa fa-star gold"></i>
+		<i class="fa fa-star gold"></i>
+		<i class="fa fa-star gold"></i>
+		<i class="fa fa-star"></i>
+	</div>
+	
+</div>
+
+				<h2 class="mt-4">Eric</h2>
+				<p class="text-center">
 Salut !
 Mon anniversaire était un moment unique dans ma vie. Je m’en souviens comme si c’était hier. Son ambiance « Love Power », le cadre idyllique des plus beaux paysages de vacances...
 								</p>
 			</div>
-			<!-- /.col-lg-4 -->
-			<div class="col-lg-4">
-				<img class="bd-placeholder-img rounded-circle" width="140" height="140" 
-				src={{asset('/images/imagesUpload/icones/fem.jpeg')}} 
-				role="img" aria-label="Placeholder: 140x140">
-				
-				</img>
-				<h2>Faby B.</h2>
-					<p class="text-center">
+			<!-- 3e avis -->
+			<div class="col-lg-4 text-center">
+
+			<div class="rating">
+	<div class="stars">
+		<i class="fa fa-star gold"></i>
+		<i class="fa fa-star gold"></i>
+		<i class="fa fa-star gold"></i>
+		<i class="fa fa-star gold"></i>
+		<i class="fa fa-star gold"></i>
+	</div>
+	
+</div>
+
+				<h2 class="mt-4">Faby</h2>
+				<p class="text-center">
 Hi !
 Mon mariage était un moment unique dans ma vie. Je m’en souviens comme si c’était hier. Son ambiance « Love Power », le cadre idyllique des plus beaux paysages de vacances, les mines réjouies de nos invités, et surtout… un feu d’artifices mémorable qui nous a été offert par notre ami artificier.
 Comment ne pas garder ces précieux souvenirs toute une vie! Cela nous motive à organiser une énorme fête pour nos 15 ans de mariage. On prend les mêmes et on recommence?
 								</p>
 			</div>
-			<!-- /.col-lg-4 -->
+		
 		</div>
-		<!-- /.row -->
+	
 	</div>
 
 
